Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-DEBUG=socket.io-client:*,engine.io-client:*
 HEARTBEAT_MS=1000
+PORT=8080
+READ_TOKEN=MNMB2BLOLTTYL
 REFRESH_MS=5000
+SELECT_TTL_MS=600000
 STALE_MS=120000
 TL_BRAND_KEY=Lqlrx67b1vtoyAdPlceZuFdu91n_iNGN
 TL_ENV=LIVE
-TL_SERVER=wss://api.tradelocker.com
+TL_SERVER=https://api.tradelocker.com
