--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "type": "commonjs",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "TL_BRAND_KEY=dev node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "socket.io-client": "^4.7.5"
   }
 }
