--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "tradelocker-brandsocket-relay",
-  "version": "1.0.0",
-  "type": "commonjs",
-  "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "name": "tl-brandsocket-relay",
+  "version": "1.0.1",
+  "private": true,
+  "engines": { "node": ">=18 <21" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
+    "express": "^4.19.2",
     "socket.io-client": "^4.7.5"
   }
 }
